Closed Bug 547668 Opened 14 years ago Closed 14 years ago

TabChild.cpp fail to compile with Qt port enabled.

Categories

(Core :: IPC, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: romaxa, Assigned: romaxa)

Details

Attachments

(1 file)

../../dist/include/nsVoidArray.h: In member function 'void nsAutoVoidArray::ResetToAutoBuffer()':
../../dist/include/nsVoidArray.h:193: warning: cast from 'char*' to 'nsVoidArray::Impl*' increases required alignment of target type
In file included from ../../dist/include/nsIDocument.h:40,
                 from dom/ipc/../../content/base/src/nsScriptLoader.h:52,
                 from dom/ipc/TabChild.cpp:71:
../../dist/include/nsINode.h: In member function 'nsINode::nsSlots* nsINode::GetSlots()':
../../dist/include/nsINode.h:908: error: expected unqualified-id before '=' token
../../dist/include/nsINode.h:909: error: expected primary-expression before ')' token
../../dist/include/nsINode.h:910: error: expected primary-expression before ')' token
../../dist/include/nsINode.h:913: error: return-statement with no value, in function returning 'nsINode::nsSlots*'
make[7]: *** [TabChild.o] Error 1
Assignee: nobody → romaxa
Attachment #428164 - Flags: review?(benjamin)
Comment on attachment 428164 [details] [diff] [review]
Hate Qt includes...

works for me.  benjamin, can you/I push?
Attachment #428164 - Flags: review?(benjamin) → review+
Fixed in:
http://hg.mozilla.org/projects/electrolysis/rev/9c9b4447c319
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: