Bug 547668 - TabChild.cpp fail to compile with Qt port enabled. r=dougt